--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,6 @@
 :root {
-    --main-bg-color: #edf5fe;
-    --light-blue: #03a9f4;
+    --main-bg-color: #e2e2e2;
+    --light-blue: purple;
     --dark-blue: #028bca;
   }
 
@@ -15,17 +15,11 @@
     color: #333;
   }
 
-  .logo {
-    position: absolute;
-    top: 10px;
-    left: 10px;
-    width: 150px;
-  }
 section.download {
     background: #fff;
     width: 430px;
     max-width: 90%;
-    border-radius: 25px;
+    border-radius: 8px;
     box-shadow: 0px 20px 20px 0px #00000017;
     padding: 2rem;
     text-align: center;
